--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     <div class="flex place-content-between">
                                         <div class="inline-block relative h-16">
                                             <div class="Ellipse -bottom-1 -right-0" style="right: 2px;"></div>
-                                            <a href="https://dize.github.io"><img class="rounded-full" src="./assets/img/1.png" alt="fame.dize" height="64" width="64">
+                                            <a href="https://dize.github.io/dize/"><img class="rounded-full" src="./assets/img/1.png" alt="fame.dize" height="64" width="64">
                                                 <div class="absolute h-6 w-6 -bottom-1 -right-1 border-[4px] border-dark-500 rounded-full bg-online" style="right: 2px;"></div>
                                             </a>
                                             <div>
@@ -102,7 +102,7 @@
                                 </div>
                                 <div id="spotify-container" style="display: none;">
                                     <div>
-                                        <a href="https://dize.github.io"><img id="spotify-avatar" class="rounded-md" src="./assets/img/bg.png" alt="123" height="64" width="64"></a>
+                                        <a href="https://dize.github.io/dize/"><img id="spotify-avatar" class="rounded-md" src="./assets/img/bg.png" alt="123" height="64" width="64"></a>
                                     </div>
                                     <div>
                                         <p id="spotify-listen" class="font-sans antialiased text-color-spotify-listen font-bold text-spotify-listen"></p>
