--- a/guilds.html
+++ b/guilds.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <a href="https://dize.github.io">
+    <a href="https://dize.github.io/dize/">
         <div class="nickname-container">
             <img class="avatar" src="./assets/img/1.png" alt="Avatar">
             <div class="nickname">Dize</div>
